--- a/charts/monitoring/templates/podmonitor-petclinic.yaml
+++ b/charts/monitoring/templates/podmonitor-petclinic.yaml
@@ -1,17 +1,17 @@
-{{- if .Values.podMonitor.myApp.enabled }}
+{{- if .Values.podMonitor.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
-  name: my-app
+  name: petclinic
   labels:
     release: {{ .Values.prometheusReleaseLabel }}
 spec:
   selector:
     matchLabels:
-      app: {{ .Values.podMonitor.myApp.selectorApp }}
+      app.kubernetes.io/name: {{ .Values.podMonitor.appName }}
   namespaceSelector:
     matchNames:
-      - {{ .Values.podMonitor.myApp.namespace }}
+      - {{ .Release.Namespace }}
   podMetricsEndpoints:
     - path: /actuator/prometheus
       port: http
