--- a/charts/monitoring/templates/prometheusrule-app-alerts.yaml
+++ b/charts/monitoring/templates/prometheusrule-app-alerts.yaml
@@ -1,20 +1,20 @@
-{{- if .Values.prometheusRule.myApp.enabled }}
+{{- if .Values.prometheusRule.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
-  name: my-app-alerts
+  name: petclinic-alerts
   labels:
     release: {{ .Values.prometheusReleaseLabel }}
 spec:
   groups:
-    - name: my-app.rules
+    - name: petclinic.rules
       rules:
         - alert: HighHttpLatency
-          expr: histogram_quantile(0.95, rate(http_server_requests_seconds_bucket{app="{{ .Values.podMonitor.myApp.selectorApp }}"}[5m])) > 1
+          expr: histogram_quantile(0.95, rate(http_server_requests_seconds_bucket[5m])) > 1
           for: 1m
           labels:
             severity: warning
           annotations:
-            summary: "HTTP latency is high (p95 > 1s)"
-            description: "Pod {{`{{ $labels.pod }}`}} is experiencing high latency."
+            summary: "High HTTP latency (p95 > 1s)"
+            description: "Service {{`{{ $labels.job }}`}} is experiencing high latency."
 {{- end }}
