--- a/environments/prod/loki-values.yaml
+++ b/environments/prod/loki-values.yaml
@@ -1,15 +1,5 @@
 loki:
   auth_enabled: false
-  commonConfig:
-    replication_factor: 1
-  storage:
-    type: filesystem
-  schemaConfig:
-    configs:
-      - from: 2024-01-01
-        store: boltdb-shipper
-        object_store: filesystem
-        schema: v11
-        index:
-          prefix: index_
-          period: 24h
+
+gateway:
+  enabled: false
