Refactor Prometheus configuration and add ServiceMonitor for API Gateway

--- a/charts/monitoring/Chart.yaml
+++ b/charts/monitoring/Chart.yaml
@@ -1,5 +1,4 @@
 apiVersion: v2
 name: monitoring
-description: A Helm chart for Prometheus, Grafana, Loki and monitoring CRDs
 version: 0.1.0
-appVersion: "1.0"
+description: Custom ServiceMonitors for Prometheus to scrape Spring Boot apps
