--- a/apps/prod/prometheus.yaml
+++ b/apps/prod/prometheus.yaml
@@ -4,17 +4,20 @@ metadata:
   name: prometheus
   namespace: argocd
 spec:
+  destination:
+    namespace: monitoring
+    server: https://kubernetes.default.svc
   project: default
   source:
-    repoURL: https://github.com/hao-assignments/devops-lab03-monitoring.git
-    targetRevision: HEAD
-    path: charts/monitoring
+    repoURL: https://prometheus-community.github.io/helm-charts
+    chart: kube-prometheus-stack
+    targetRevision: 57.0.2
     helm:
-      valueFiles:
-        - environments/prod/prometheus-values.yaml
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: monitoring
+      releaseName: prometheus
+      values: |
+        prometheus:
+          prometheusSpec:
+            serviceMonitorSelector: {}
   syncPolicy:
     automated:
       prune: true
