--- a/charts/monitoring/Chart.yaml
+++ b/charts/monitoring/Chart.yaml
@@ -1,14 +1,23 @@
 # charts/monitoring/Chart.yaml
 apiVersion: v2
 name: monitoring-stack
-description: A Helm chart for deploying Prometheus, Grafana, and Loki
-version: 0.1.0 # Phiên bản của chart tổng hợp của bạn
+description: A Helm chart for deploying essential monitoring components
+version: 0.1.0
 
 dependencies:
-  - name: kube-prometheus-stack
-    version: "58.1.0" # Kiểm tra phiên bản mới nhất trên Artifact Hub hoặc repo của chart
+  - name: prometheus
+    version: "25.19.0" # Phiên bản chart Prometheus Community (chỉ cài Prometheus server)
     repository: "https://prometheus-community.github.io/helm-charts"
-  - name: loki
-    version: "5.45.0" # Kiểm tra phiên bản mới nhất
+    condition: prometheus.enabled # Chỉ cài nếu prometheus.enabled là true
+  - name: grafana
+    version: "8.3.4" # Phiên bản chart Grafana Community
     repository: "https://grafana.github.io/helm-charts"
-    condition: loki.enabled # Chỉ cài đặt Loki nếu loki.enabled là true trong values
+    condition: grafana.enabled # Chỉ cài nếu grafana.enabled là true
+  - name: loki
+    version: "5.45.0" # Phiên bản chart Loki Community
+    repository: "https://grafana.github.io/helm-charts"
+    condition: loki.enabled
+  - name: promtail
+    version: "6.15.2" # Phiên bản chart Promtail Community
+    repository: "https://grafana.github.io/helm-charts"
+    condition: promtail.enabled
