--- a/charts/petclinic/templates/visits-service.yaml
+++ b/charts/petclinic/templates/visits-service.yaml
@@ -21,8 +21,7 @@ spec:
           ports:
             - containerPort: 8082
           resources:
-            limits:
-              memory: 512Mi
+            {{- toYaml .Values.visits_service.resources | nindent 12 }}
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: docker
@@ -33,7 +32,7 @@ spec:
             - name: EUREKA_INSTANCE_HOSTNAME
               valueFrom:
                 fieldRef:
-                  fieldPath: status.podIP # Use Pod IP as hostname
+                  fieldPath: status.podIP
             - name: MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE
               value: "*"
             - name: SPRING_CLOUD_DISCOVERY_HEALTH_TIMEOUT
@@ -67,5 +66,6 @@ spec:
     app: visits-service
   ports:
     - protocol: TCP
-      port: 8082
+      port: {{ .Values.visits_service.service.port }}
       targetPort: 8082
+  type: {{ .Values.visits_service.service.type }}
