--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -153,5 +153,17 @@ loki:
     enabled: false
   promtail:
     enabled: true
+    config:
+      serverPort: 3100
+      clients:
+        - url: http://loki-stack:3100/loki/api/v1/push
+    readinessProbe:
+      httpGet:
+        path: /ready
+        port: http-metrics
+      initialDelaySeconds: 10
+      timeoutSeconds: 5
+      failureThreshold: 3
+      periodSeconds: 10
   grafana:
     enabled: false
