--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -83,8 +83,20 @@ prometheus:
   server:
     persistentVolume:
       enabled: false
+    resources:
+      limits:
+        cpu: 500m
+        memory: 512Mi
+      requests:
+        cpu: 100m
+        memory: 256Mi
+    readinessProbeInitialDelay: 30
+    livenessProbeInitialDelay: 30
   serverFiles:
     prometheus.yml:
+      global:
+        scrape_interval: 15s
+        evaluation_interval: 15s
       scrape_configs:
         - job_name: prometheus
           static_configs:
@@ -92,21 +104,29 @@ prometheus:
         - job_name: api-gateway
           metrics_path: /actuator/prometheus
           honor_exemplars: false
+          scrape_interval: 15s
+          scrape_timeout: 10s
           static_configs:
             - targets: ['api-gateway.petclinic-prod.svc.cluster.local:8080']
         - job_name: customers-service
           metrics_path: /actuator/prometheus
           honor_exemplars: false
+          scrape_interval: 15s
+          scrape_timeout: 10s
           static_configs:
             - targets: ['customers-service.petclinic-prod.svc.cluster.local:8081']
         - job_name: visits-service
           metrics_path: /actuator/prometheus
           honor_exemplars: false
+          scrape_interval: 15s
+          scrape_timeout: 10s
           static_configs:
             - targets: ['visits-service.petclinic-prod.svc.cluster.local:8082']
         - job_name: vets-service
           metrics_path: /actuator/prometheus
           honor_exemplars: false
+          scrape_interval: 15s
+          scrape_timeout: 10s
           static_configs:
             - targets: ['vets-service.petclinic-prod.svc.cluster.local:8083']
 
@@ -153,5 +173,17 @@ loki:
     enabled: false
   promtail:
     enabled: true
+    config:
+      serverPort: 3100
+      clients:
+        - url: http://loki-stack:3100/loki/api/v1/push
+    readinessProbe:
+      httpGet:
+        path: /ready
+        port: http-metrics
+      initialDelaySeconds: 10
+      timeoutSeconds: 5
+      failureThreshold: 3
+      periodSeconds: 10
   grafana:
     enabled: false
