--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -174,16 +174,17 @@ loki:
   promtail:
     enabled: true
     config:
-      serverPort: 3100
+      server:
+        http_listen_port: 3101
       clients:
-        - url: http://loki-stack:3100/loki/api/v1/push
+        - url: http://loki-stack.petclinic-prod.svc.cluster.local:3100/loki/api/v1/push
     readinessProbe:
       httpGet:
         path: /ready
-        port: http-metrics
-      initialDelaySeconds: 10
-      timeoutSeconds: 5
-      failureThreshold: 3
-      periodSeconds: 10
+        port: 3101
+      initialDelaySeconds: 20
+      timeoutSeconds: 10
+      failureThreshold: 5
+      periodSeconds: 15
   grafana:
     enabled: false
