Update Prometheus configuration with enhanced resource limits, probe settings, and scrape intervals

--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -85,18 +85,37 @@ prometheus:
       enabled: false
     resources:
       limits:
-        cpu: 500m
-        memory: 512Mi
+        cpu: 1000m
+        memory: 1Gi
       requests:
         cpu: 100m
         memory: 256Mi
-    readinessProbeInitialDelay: 30
-    livenessProbeInitialDelay: 30
+    securityContext:
+      runAsUser: 65534
+      runAsNonRoot: true
+      fsGroup: 65534
+    readinessProbeInitialDelay: 60
+    livenessProbeInitialDelay: 60
+    retention: "1d"
+    enableAdminApi: false
+    startupProbe:
+      httpGet:
+        path: /-/ready
+        port: 9090
+      failureThreshold: 30
+      periodSeconds: 10
+    extraFlags:
+      - web.enable-lifecycle
+      - storage.tsdb.no-lockfile
+  configmapReload:
+    prometheus:
+      enabled: true
   serverFiles:
     prometheus.yml:
       global:
-        scrape_interval: 15s
-        evaluation_interval: 15s
+        scrape_interval: 30s
+        evaluation_interval: 30s
+        scrape_timeout: 20s
       scrape_configs:
         - job_name: prometheus
           static_configs:
@@ -104,29 +123,29 @@ prometheus:
         - job_name: api-gateway
           metrics_path: /actuator/prometheus
           honor_exemplars: false
-          scrape_interval: 15s
-          scrape_timeout: 10s
+          scrape_interval: 30s
+          scrape_timeout: 15s
           static_configs:
             - targets: ['api-gateway.petclinic-prod.svc.cluster.local:8080']
         - job_name: customers-service
           metrics_path: /actuator/prometheus
           honor_exemplars: false
-          scrape_interval: 15s
-          scrape_timeout: 10s
+          scrape_interval: 30s
+          scrape_timeout: 15s
           static_configs:
             - targets: ['customers-service.petclinic-prod.svc.cluster.local:8081']
         - job_name: visits-service
           metrics_path: /actuator/prometheus
           honor_exemplars: false
-          scrape_interval: 15s
-          scrape_timeout: 10s
+          scrape_interval: 30s
+          scrape_timeout: 15s
           static_configs:
             - targets: ['visits-service.petclinic-prod.svc.cluster.local:8082']
         - job_name: vets-service
           metrics_path: /actuator/prometheus
           honor_exemplars: false
-          scrape_interval: 15s
-          scrape_timeout: 10s
+          scrape_interval: 30s
+          scrape_timeout: 15s
           static_configs:
             - targets: ['vets-service.petclinic-prod.svc.cluster.local:8083']
 
