--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -149,5 +149,25 @@ loki:
     enabled: false
   promtail:
     enabled: true
+    config:
+      server:
+        http_listen_port: 3101
+      clients:
+        - url: http://loki-stack.petclinic-prod.svc.cluster.local:3100/loki/api/v1/push
+    readinessProbe:
+      httpGet:
+        path: /ready
+        port: 3101
+      initialDelaySeconds: 20
+      timeoutSeconds: 10
+      failureThreshold: 5
+      periodSeconds: 15
+    extraScrapeConfigs:
+      - job_name: kubernetes-pods
+        kubernetes_sd_configs:
+          - role: pod
+            namespaces:
+              names:
+                - petclinic-prod
   grafana:
     enabled: false
