--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -117,13 +117,22 @@ grafana:
       datasources:
         - name: Prometheus
           type: prometheus
-          url: http://prometheus-server.petclinic-prod.svc.cluster.local
+          url: http://petclinic-prod-prometheus-server.petclinic-prod.svc.cluster.local
           access: proxy
           isDefault: true
+          jsonData:
+            timeInterval: "5s"
+            queryTimeout: "30s"
+            httpMethod: "GET"
+          editable: true
         - name: Loki
           type: loki
-          url: http://loki-stack.petclinic-prod.svc.cluster.local:3100
+          url: http://petclinic-prod-loki.petclinic-prod.svc.cluster.local:3100
           access: proxy
+          jsonData:
+            maxLines: 1000
+            timeout: 30
+          editable: true
   dashboardProviders:
     dashboardproviders.yaml:
       apiVersion: 1
