Update Chart.yaml and values.yaml for PetClinic: refine app version, dependencies, and replace loki-stack with separate loki and promtail configurations

--- a/charts/petclinic/Chart.yaml
+++ b/charts/petclinic/Chart.yaml
@@ -1,20 +1,20 @@
 apiVersion: v2
 name: petclinic
-description: A Helm chart for Spring Petclinic microservices with monitoring
+description: Spring PetClinic Microservices with Monitoring
 type: application
 version: 0.1.0
-appVersion: "2.7.0"
+appVersion: "1.0.0"
 
 dependencies:
   - name: prometheus
-    version: 27.20.0
     repository: https://prometheus-community.github.io/helm-charts
-    condition: prometheus.enabled
+    version: "19.7.2"
   - name: grafana
-    version: 9.2.2
     repository: https://grafana.github.io/helm-charts
-    condition: grafana.enabled
-  - name: loki-stack
-    version: 2.9.3
+    version: "7.0.11"
+  - name: loki
     repository: https://grafana.github.io/helm-charts
-    condition: loki.enabled
+    version: "5.8.9"
+  - name: promtail
+    repository: https://grafana.github.io/helm-charts
+    version: "6.15.3"
