--- a/charts/petclinic/Chart.yaml
+++ b/charts/petclinic/Chart.yaml
@@ -11,7 +11,7 @@ dependencies:
     repository: https://prometheus-community.github.io/helm-charts
     condition: prometheus.enabled
   - name: grafana
-    version: 9.2.2
+    version: 9.2.0-beta1
     repository: https://grafana.github.io/helm-charts
     condition: grafana.enabled
   - name: loki-stack
