--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -163,22 +163,11 @@ grafana:
 loki:
   enabled: true
   persistence:
-    enabled: false
+    enabled: true
+    size: 5Gi
   service:
     port: 3100
     type: ClusterIP
-  config:
-    auth_enabled: false
-    ingester:
-      lifecycler:
-        address: 0.0.0.0
-        ring:
-          kvstore:
-            store: inmemory
-          replication_factor: 1
-        final_sleep: 0s
-      chunk_idle_period: 5m
-      max_transfer_retries: 0
   promtail:
     enabled: true
     config:
@@ -195,13 +184,6 @@ loki:
                   - petclinic-prod
           pipeline_stages:
             - docker: {}
-            - match:
-                selector: '{namespace="petclinic-prod"}'
-                stages:
-                  - labels:
-                      namespace: ""
-                      app: ""
-                  - labelallow: ["namespace", "app"]
           relabel_configs:
             - source_labels: [__meta_kubernetes_pod_label_app]
               target_label: app
