Add Helm chart configurations for Petclinic and Loki stack with persistence settings

--- a/environments/prod/values.yaml
+++ b/environments/prod/values.yaml
@@ -42,3 +42,9 @@ grafana:
   enabled: true
   service:
     type: LoadBalancer
+
+loki:
+  enabled: true
+  persistence:
+    enabled: true
+    size: 5Gi
