--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -106,6 +106,19 @@ prometheus:
           static_configs:
             - targets: ['vets-service.petclinic-prod.svc.cluster.local:8083']
 
+loki:
+  enabled: true
+  persistence:
+    enabled: true
+    size: 5Gi
+  promtail:
+    enabled: true
+    config:
+      clients:
+        - url: http://petclinic-prod-loki.petclinic-prod.svc.cluster.local:3100/loki/api/v1/push
+  grafana:
+    enabled: false  # Tắt Grafana của Loki vì đã có Grafana riêng
+
 grafana:
   enabled: true
   persistence:
@@ -125,6 +138,12 @@ grafana:
             queryTimeout: "30s"
             httpMethod: "GET"
           editable: true
+        - name: Loki
+          type: loki
+          url: http://petclinic-prod-loki.petclinic-prod.svc.cluster.local:3100
+          access: proxy
+          jsonData:
+            maxLines: 1000
   dashboardProviders:
     dashboardproviders.yaml:
       apiVersion: 1
