Add LoadBalancer service type for Grafana in Petclinic Helm chart

--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -118,6 +118,8 @@ loki:
         - url: http://petclinic-prod-loki.petclinic-prod.svc.cluster.local:3100/loki/api/v1/push
   grafana:
     enabled: true
+    service:
+      type: LoadBalancer
     adminPassword: admin
     datasources:
       datasources.yaml:
