Refactor Loki configuration: rename to loki-stack and update Grafana service settings

--- a/environments/prod/values.yaml
+++ b/environments/prod/values.yaml
@@ -38,11 +38,7 @@ prometheus:
     service:
       type: LoadBalancer
 
-loki:
-  enabled: true
-  persistence:
-    enabled: true
-    size: 5Gi
+loki-stack:
   grafana:
     enabled: true
     service:
