--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -106,21 +106,18 @@ prometheus:
           static_configs:
             - targets: ['vets-service.petclinic-prod.svc.cluster.local:8083']
 
-loki:
-  enabled: true
-  persistence:
-    enabled: true
-    size: 5Gi
+loki-stack:
   promtail:
     enabled: true
-    config:
-      clients:
-        - url: http://petclinic-prod-loki.petclinic-prod.svc.cluster.local:3100/loki/api/v1/push
+  loki:
+    persistence:
+      enabled: true
+      size: 5Gi
   grafana:
     enabled: true
+    adminPassword: admin
     service:
       type: LoadBalancer
-    adminPassword: admin
     datasources:
       datasources.yaml:
         apiVersion: 1
@@ -130,17 +127,10 @@ loki:
             url: http://petclinic-prod-prometheus-server.petclinic-prod.svc.cluster.local
             access: proxy
             isDefault: true
-            jsonData:
-              timeInterval: "5s"
-              queryTimeout: "30s"
-              httpMethod: "GET"
-            editable: true
           - name: Loki
             type: loki
-            url: http://petclinic-prod-loki.petclinic-prod.svc.cluster.local:3100
+            url: http://petclinic-prod-loki-stack.petclinic-prod.svc.cluster.local:3100
             access: proxy
-            jsonData:
-              maxLines: 1000
     dashboardProviders:
       dashboardproviders.yaml:
         apiVersion: 1
