--- a/charts/petclinic/values.yaml
+++ b/charts/petclinic/values.yaml
@@ -113,14 +113,14 @@ loki-stack:
       snippets:
         extraRelabelConfigs:
           - action: replace
-            sourceLabels: [__meta_kubernetes_pod_name]
-            targetLabel: pod
+            source_labels: [__meta_kubernetes_pod_name]
+            target_label: pod
           - action: replace
-            sourceLabels: [__meta_kubernetes_namespace]
-            targetLabel: namespace
+            source_labels: [__meta_kubernetes_namespace]
+            target_label: namespace
           - action: replace
-            sourceLabels: [__meta_kubernetes_pod_container_name]
-            targetLabel: container
+            source_labels: [__meta_kubernetes_pod_container_name]
+            target_label: container
       clients:
         - url: http://petclinic-prod-loki:3100/loki/api/v1/push
   loki:
